--- a/Astar.ipynb
+++ b/Astar.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNLi7en0YTrX3qW8IRiv11B",
+      "authorship_tag": "ABX9TyNL0Ej414Wq9qmrzUo7wzx+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -313,6 +313,123 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "import math\n",
+        "\n",
+        "def infoGain(P, N):\n",
+        "    return -P / (P + N) * math.log2(P / (P + N)) - N / (P + N) * math.log2(N / (P + N))\n",
+        "\n",
+        "def insertNode(tree, addTo, Node):\n",
+        "    for k, v in tree.items():\n",
+        "        if isinstance(v, dict):\n",
+        "            tree[k] = insertNode(v, addTo, Node)\n",
+        "        if addTo in tree:\n",
+        "            tree[addTo] = {Node: 'None'} if isinstance(tree[addTo], dict) else {Node: 'None'}\n",
+        "    return tree\n",
+        "\n",
+        "def insertConcept(tree, addTo, Node):\n",
+        "    for k, v in tree.items():\n",
+        "        if isinstance(v, dict):\n",
+        "            tree[k] = insertConcept(v, addTo, Node)\n",
+        "        if addTo in tree:\n",
+        "            tree[addTo] = Node\n",
+        "    return tree\n",
+        "\n",
+        "def getNextNode(data, AttributeList, concept, conceptVals, tree, addTo):\n",
+        "    Total = data.shape[0]\n",
+        "    if Total == 0:\n",
+        "        return tree\n",
+        "\n",
+        "    countC = {cVal: data[data[concept] == cVal].shape[0] for cVal in conceptVals}\n",
+        "\n",
+        "    if countC[conceptVals[0]] == 0:\n",
+        "        tree = insertConcept(tree, addTo, conceptVals[1])\n",
+        "        return tree\n",
+        "\n",
+        "    if countC[conceptVals[1]] == 0:\n",
+        "        tree = insertConcept(tree, addTo, conceptVals[0])\n",
+        "        return tree\n",
+        "\n",
+        "    ClassEntropy = infoGain(countC[conceptVals[0]], countC[conceptVals[1]])\n",
+        "\n",
+        "    Attr = {a: list(set(data[a])) for a in AttributeList}\n",
+        "    AttrCount = {}\n",
+        "    EntropyAttr = {}\n",
+        "\n",
+        "    for att in Attr:\n",
+        "        for vals in Attr[att]:\n",
+        "            for c in conceptVals:\n",
+        "                iData = data[data[att] == vals]\n",
+        "                dataAtt = iData[iData[concept] == c]\n",
+        "                AttrCount[c] = dataAtt.shape[0]\n",
+        "\n",
+        "    TotalInfo = AttrCount[conceptVals[0]] + AttrCount[conceptVals[1]]\n",
+        "\n",
+        "    if AttrCount[conceptVals[0]] == 0 or AttrCount[conceptVals[1]] == 0:\n",
+        "        InfoGain = 0\n",
+        "    else:\n",
+        "        InfoGain = infoGain(AttrCount[conceptVals[0]], AttrCount[conceptVals[1]])\n",
+        "\n",
+        "    for att in Attr:\n",
+        "        EntropyAttr[att] = (TotalInfo / Total) * InfoGain if att not in EntropyAttr else EntropyAttr[att] + (TotalInfo / Total) * InfoGain\n",
+        "\n",
+        "    Gain = {g: ClassEntropy - EntropyAttr[g] for g in EntropyAttr}\n",
+        "    Node = max(Gain, key=Gain.get)\n",
+        "\n",
+        "    tree = insertNode(tree, addTo, Node)\n",
+        "\n",
+        "    for nD in Attr[Node]:\n",
+        "        tree = insertNode(tree, Node, nD)\n",
+        "        newData = data[data[Node] == nD].drop(Node, axis=1)\n",
+        "        AttributeList = list(newData)[:-1]\n",
+        "        tree = getNextNode(newData, AttributeList, concept, conceptVals, tree, nD)\n",
+        "\n",
+        "    return tree\n",
+        "\n",
+        "def main():\n",
+        "    data = pd.read_csv('PlayTennis.csv')\n",
+        "    AttributeList = list(data)[:-1]\n",
+        "    concept = str(list(data)[-1])\n",
+        "    conceptVals = list(set(data[concept]))\n",
+        "    tree = getNextNode(data, AttributeList, concept, conceptVals, {'root': 'None'}, 'root')\n",
+        "    return tree\n",
+        "\n",
+        "tree = main()['root']\n",
+        "df = pd.read_csv('PlayTennis.csv')\n",
+        "\n",
+        "def test(tree, d):\n",
+        "    for k in tree:\n",
+        "        for v in tree[k]:\n",
+        "            if (d[k] == v and isinstance(tree[k][v], dict)):\n",
+        "                test(tree[k][v], d)\n",
+        "            elif (d[k] == v):\n",
+        "                print(\"Classification: \" + tree[k][v])\n",
+        "\n",
+        "df.head()\n",
+        "print(tree)\n",
+        "test(tree, df.loc[0, :])\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "v0msGOanZn62",
+        "outputId": "a4e64cf0-2a48-4bec-ecea-ea3a1316cbb9"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'Outlook': {'Sunny': {'Temperature': {'Cool': 'Yes'}}}}\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "# **3.Decision Tree**"
@@ -446,11 +563,11 @@
         "    return tree\n",
         "\n",
         "def main():\n",
-        "    data = pd.read_csv('Datasets/PlayTennis.csv')\n",
+        "    data = pd.read_csv('PlayTennis.csv')\n",
         "    # Reading CSV\n",
         "\n",
-        "    if 'Unnamed: 0' in data.columns:\n",
-        "        data = data.drop('Unnamed: 0', axis=1)\n",
+        "    # if 'Unnamed: 0' in data.columns:\n",
+        "    #     data = data.drop('Unnamed: 0', axis=1)\n",
         "\n",
         "    AttributeList = list(data)[:-1]\n",
         "    # Get Attribute List\n",
@@ -464,7 +581,7 @@
         "    return tree\n",
         "\n",
         "tree = main()['root']\n",
-        "df = pd.read_csv('Datasets/PlayTennis.csv')\n",
+        "df = pd.read_csv('PlayTennis.csv')\n",
         "\n",
         "def test(tree, d):\n",
         "    for k in tree:\n",
@@ -474,18 +591,31 @@
         "            elif (d[k] == v):\n",
         "                print(\"Classification: \" + tree[k][v])\n",
         "\n",
-        "if 'Unnamed: 0' in df.columns:\n",
-        "    df = df.drop('Unnamed: 0', axis=1)\n",
+        "# if 'Unnamed: 0' in df.columns:\n",
+        "#     df = df.drop('Unnamed: 0', axis=1)\n",
         "\n",
         "df.head()\n",
         "print(tree)\n",
         "test(tree, df.loc[0, :])\n"
       ],
       "metadata": {
-        "id": "9msWxYT8YyNA"
+        "id": "9msWxYT8YyNA",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "52faecf1-15f8-4e01-e158-3ffe875d12f2"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'Outlook': {'Rain': {'Temperature': {'Mild': {'Humidity': {'Normal': 'Yes', 'High': 'No'}}, 'Cool': 'Yes', 'Hot': 'No'}}, 'Overcast': 'Yes', 'Sunny': {'Temperature': {'Mild': {'Humidity': {'Normal': 'Yes', 'High': 'No'}}, 'Hot': 'No', 'Cool': 'Yes'}}}}\n",
+            "Classification: No\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -564,8 +694,8 @@
         "    print(\"Misclassification Rate = {}%\".format(misclassification_rate))\n",
         "    print(\"Accuracy = {}%\".format(accuracy))\n",
         "\n",
-        "data = pd.read_csv('Datasets/PlayTennis.csv')\n",
-        "data.drop(['Unnamed: 0'], axis=1, inplace=True)\n",
+        "data = pd.read_csv('PlayTennis.csv')\n",
+        "#data.drop(['Unnamed: 0'], axis=1, inplace=True)\n",
         "print(data)\n",
         "\n",
         "concept = str(list(data)[-1])\n",
@@ -580,14 +710,80 @@
         "print(Attr)\n",
         "\n",
         "conceptProbs, AttrConcept, probability_list = train(data, Attr, concept_list, concept)\n",
-        "examples = pd.read_csv('Datasets/PlayTennis.csv')\n",
+        "examples = pd.read_csv('PlayTennis.csv')\n",
         "test(examples.values, Attr, concept_list, conceptProbs, AttrConcept, probability_list)\n"
       ],
       "metadata": {
-        "id": "jWKmOjvyayk6"
+        "id": "jWKmOjvyayk6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0af2033d-26e6-40f0-aa04-69018639126e"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "     Outlook Temperature Humidity    Wind Play Tennis\n",
+            "0      Sunny         Hot     High    Weak          No\n",
+            "1      Sunny         Hot     High  Strong          No\n",
+            "2   Overcast         Hot     High    Weak         Yes\n",
+            "3       Rain        Mild     High    Weak         Yes\n",
+            "4       Rain        Cool   Normal    Weak         Yes\n",
+            "5       Rain        Cool   Normal  Strong          No\n",
+            "6   Overcast        Cool   Normal  Strong         Yes\n",
+            "7      Sunny        Mild     High    Weak          No\n",
+            "8      Sunny        Cool   Normal    Weak         Yes\n",
+            "9       Rain        Mild   Normal    Weak         Yes\n",
+            "10     Sunny        Mild   Normal  Strong         Yes\n",
+            "11  Overcast        Mild     High  Strong         Yes\n",
+            "12  Overcast         Hot   Normal    Weak         Yes\n",
+            "13      Rain        Mild     High  Strong          No\n",
+            "Play Tennis\n",
+            "{'No', 'Yes'}\n",
+            "{'Outlook': {'Rain', 'Overcast', 'Sunny'}, 'Temperature': {'Mild', 'Hot', 'Cool'}, 'Humidity': {'Normal', 'High'}, 'Wind': {'Weak', 'Strong'}}\n",
+            "P(A) :  {'No': 0.35714285714285715, 'Yes': 0.6428571428571429} \n",
+            "\n",
+            "P(X/A) :  {'Outlook': {'Rain': {'No': 0.4, 'Yes': 0.3333333333333333}, 'Overcast': {'No': 0.0, 'Yes': 0.4444444444444444}, 'Sunny': {'No': 0.6, 'Yes': 0.2222222222222222}}, 'Temperature': {'Mild': {'No': 0.4, 'Yes': 0.4444444444444444}, 'Hot': {'No': 0.4, 'Yes': 0.2222222222222222}, 'Cool': {'No': 0.2, 'Yes': 0.3333333333333333}}, 'Humidity': {'Normal': {'No': 0.2, 'Yes': 0.6666666666666666}, 'High': {'No': 0.8, 'Yes': 0.3333333333333333}}, 'Wind': {'Weak': {'No': 0.4, 'Yes': 0.6666666666666666}, 'Strong': {'No': 0.6, 'Yes': 0.3333333333333333}}} \n",
+            "\n",
+            "P(X) :  {'Outlook': {'Rain': 0.35714285714285715, 'Overcast': 0.2857142857142857, 'Sunny': 0.35714285714285715}, 'Temperature': {'Mild': 0.42857142857142855, 'Hot': 0.2857142857142857, 'Cool': 0.2857142857142857}, 'Humidity': {'Normal': 0.5, 'High': 0.5}, 'Wind': {'Weak': 0.5714285714285714, 'Strong': 0.42857142857142855}} \n",
+            "\n",
+            "{'No': 0.9408000000000002, 'Yes': 0.2419753086419753}\n",
+            "Classification : No Expected : No\n",
+            "{'No': 1.8816000000000002, 'Yes': 0.16131687242798354}\n",
+            "Classification : No Expected : No\n",
+            "{'No': 0.0, 'Yes': 0.6049382716049383}\n",
+            "Classification : Yes Expected : Yes\n",
+            "{'No': 0.4181333333333335, 'Yes': 0.4839506172839506}\n",
+            "Classification : Yes Expected : Yes\n",
+            "{'No': 0.07840000000000004, 'Yes': 1.0888888888888888}\n",
+            "Classification : Yes Expected : Yes\n",
+            "{'No': 0.15680000000000005, 'Yes': 0.7259259259259259}\n",
+            "Classification : Yes Expected : No\n",
+            "{'No': 0.0, 'Yes': 1.2098765432098766}\n",
+            "Classification : Yes Expected : Yes\n",
+            "{'No': 0.6272000000000001, 'Yes': 0.3226337448559671}\n",
+            "Classification : No Expected : No\n",
+            "{'No': 0.11760000000000002, 'Yes': 0.7259259259259256}\n",
+            "Classification : Yes Expected : Yes\n",
+            "{'No': 0.10453333333333338, 'Yes': 0.9679012345679012}\n",
+            "Classification : Yes Expected : Yes\n",
+            "{'No': 0.31360000000000005, 'Yes': 0.43017832647462273}\n",
+            "Classification : Yes Expected : Yes\n",
+            "{'No': 0.0, 'Yes': 0.5377229080932785}\n",
+            "Classification : Yes Expected : Yes\n",
+            "{'No': 0.0, 'Yes': 1.2098765432098766}\n",
+            "Classification : Yes Expected : Yes\n",
+            "{'No': 0.8362666666666669, 'Yes': 0.3226337448559671}\n",
+            "Classification : No Expected : No\n",
+            "Misclassification Count = 1\n",
+            "Misclassification Rate = 7.142857142857143%\n",
+            "Accuracy = 92.85714285714286%\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -866,6 +1062,93 @@
       ],
       "metadata": {
         "id": "vvVzfzMtkO8z"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "from pprint import pprint\n",
+        "from sklearn.feature_selection import mutual_info_classif\n",
+        "from collections import Counter\n",
+        "\n",
+        "def id3(df, target_attribute, attribute_names, default_class=None):\n",
+        "    cnt = Counter(x for x in df[target_attribute])\n",
+        "    if len(cnt) == 1:\n",
+        "        return next(iter(cnt))\n",
+        "\n",
+        "    elif df.empty or (not attribute_names):\n",
+        "        return default_class\n",
+        "\n",
+        "    else:\n",
+        "        gainz = mutual_info_classif(df[attribute_names], df[target_attribute], discrete_features=True)\n",
+        "        index_of_max = gainz.tolist().index(max(gainz))\n",
+        "        best_attr = attribute_names[index_of_max]\n",
+        "        tree = {best_attr: {}}\n",
+        "        remaining_attribute_names = [i for i in attribute_names if i != best_attr]\n",
+        "\n",
+        "        for attr_val, data_subset in df.groupby(best_attr):\n",
+        "            subtree = id3(data_subset, target_attribute, remaining_attribute_names, default_class)\n",
+        "            tree[best_attr][attr_val] = subtree\n",
+        "\n",
+        "        return tree\n",
+        "\n",
+        "df = pd.read_csv(\"PlayTennis.csv\")\n",
+        "\n",
+        "# Extracting attribute names excluding the target attribute\n",
+        "attribute_names = df.columns.tolist()\n",
+        "attribute_names.remove(\"Play Tennis\")\n",
+        "\n",
+        "for colname in df.select_dtypes(\"object\"):\n",
+        "    df[colname], _ = df[colname].factorize()\n",
+        "\n",
+        "print(df)\n",
+        "\n",
+        "tree = id3(df, \"Play Tennis\", attribute_names)\n",
+        "print(\"The tree structure\")\n",
+        "pprint(tree)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_qrDS4LFapjR",
+        "outputId": "f4880e3f-97c7-4f25-9703-842e2df55fd0"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "    Outlook  Temperature  Humidity  Wind  Play Tennis\n",
+            "0         0            0         0     0            0\n",
+            "1         0            0         0     1            0\n",
+            "2         1            0         0     0            1\n",
+            "3         2            1         0     0            1\n",
+            "4         2            2         1     0            1\n",
+            "5         2            2         1     1            0\n",
+            "6         1            2         1     1            1\n",
+            "7         0            1         0     0            0\n",
+            "8         0            2         1     0            1\n",
+            "9         2            1         1     0            1\n",
+            "10        0            1         1     1            1\n",
+            "11        1            1         0     1            1\n",
+            "12        1            0         1     0            1\n",
+            "13        2            1         0     1            0\n",
+            "The tree structure\n",
+            "{'Outlook': {0: {'Humidity': {0: 0, 1: 1}}, 1: 1, 2: {'Wind': {0: 1, 1: 0}}}}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Uzb4QWlab5Oe"
       },
       "execution_count": null,
       "outputs": []
